2009-11-30  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: show the deault action with other style.
	Fixes: 2905966

2009-11-30  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_alerts.php: fix deletion of compound alerts in the
	function "delete_alert_agent_module".
	Fixes: 2902618
	* godmode/agentes/configurar_agente.php: use the "delete_alert_agent_module"
	instead the sql method.

2009-11-30  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: delete the simple alerts
	asociated to deleted module.

2009-11-30  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: fix now don't show alerts with
	delete pending modules. 
	* index.php: clean source code, end return that show in browser.

2009-11-30  Raul Mateos <raulofpandora@gmail.com>

	* godmode/servers/plugin.php, godmode/reporting/map_builder.php,
	godmode/profiles/profile_list.php, godmode/reporting/map_builder_wizard.php,
	godmode/agentes/module_manager.php, godmode/agentes/planned_downtime.php:
	Better use of icons in creating components, improving appearance.

	* DEBIAN/make_deb_package.sh: Changed version string from rc2 to RC3.

2009-11-27  Sancho lerena <slerena@artica.es>

	* operation/menu.php: User section has no ACL check, always can be seen.

	* index.php: Added suppor for user-defined custom language (this code was
	on my disk for 3 months, pending to be commited!).

	* include/functions_db.php,
	* include/functions_agents.php,
	* godmode/alerts/alert_list.php,
	* godmode/agentes/modificar_agente.php, 
	* godmode/agentes/configurar_agente.php: Added audit calls to several 
	management operations who don't have or have insufficient audit info.

	* godmode/users/configure_user.php: Fixed several annoyings bugs. Added
	custom language support, and added more audit info on management operations.

	* godmode/users/user_list.php: More audit info.
